[package]
name = "logic"
version = "0.1.0"
authors = ["Jake Curran <jake@jakecurran.com>"]
edition = "2021"
publish = false
description = "Rust code"
readme = "README.md"

[dependencies]
csv = "1.1"
hyper = "0.14"
lazy_static = "1.4.0"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[profile.release]
lto = true
